<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="apeP">Apellido Paterno</string>
    <string name="apeM">Apellido Materno</string>
    <string name="nomb">Nombres</string>
    <string name="fchNac">Fecha de Nacimiento</string>
    <string name="fchNacPh">00/00/0000</string>
    <string name="colg">Colegio de Procedencia</string>
    <string name="carPt">Carrera Elegida</string>
    <string name="regBtn">Registrar</string>
    <string name="lisBtn">Lista de\nInscritos</string>
</resources>